F03: Implement utility functions Functions that take care of redundant code